test/attr/attr_UIApplicationMain_not_UIApplicationDelegate.swift
// RUN: %target-swift-frontend %clang-importer-sdk -parse -parse-as-library -verify %s

import UIKit

@UIApplicationMain // expected-error{{'UIApplicationMain' class must conform to the 'UIApplicationDelegate' protocol}}
class MyNonDelegate {
}
